[WFLY-16517] Sync JPMS properties declared in pom with those in common.sh