@@ -163,6 +163,9 @@
         <!-- Modularized JDK support (various workarounds) - activated via profile -->
         <modular.jdk.args>
             --add-exports=java.desktop/sun.awt=ALL-UNNAMED
+            --add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED
+            --add-exports=java.naming/com.sun.jndi.url.ldap=ALL-UNNAMED
+            --add-exports=java.naming/com.sun.jndi.url.ldaps=ALL-UNNAMED
             --add-opens=java.base/java.io=ALL-UNNAMED
             --add-opens=java.base/java.lang=ALL-UNNAMED
             --add-opens=java.base/java.lang.invoke=ALL-UNNAMED
